--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,7 +45,7 @@ form {
 
 form .field {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 2fr;
 	grid-gap: 10px;
 }
 
@@ -65,7 +65,7 @@ form button {
 	font-size: 2em;
 	background: #AD1457;
 	border: 0;
-	padding: 0 10px;
+	padding: 0 10px 3px;
 	border-radius: 50%;
 	cursor: pointer;
 	position: absolute;
